[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/ui/general/DSettings_lists_quizes.gd" type="Script" id=1]

[node name="DSettingsListQuiz" type="ScrollContainer"]
margin_right = 1600.0
margin_bottom = 1200.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1600.0
margin_bottom = 1200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="questionsHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1600.0
margin_bottom = 294.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 400

[node name="Label" type="Label" parent="VBoxContainer/questionsHBox"]
margin_top = 125.0
margin_right = 167.0
margin_bottom = 168.0
text = "Questions"

[node name="questionsAHBox" type="HBoxContainer" parent="VBoxContainer/questionsHBox"]
margin_left = 567.0
margin_right = 1426.0
margin_bottom = 294.0
custom_constants/separation = 60

[node name="QTitlesButton" type="Button" parent="VBoxContainer/questionsHBox/questionsAHBox"]
margin_top = 125.0
margin_right = 94.0
margin_bottom = 168.0
size_flags_vertical = 4
toggle_mode = true
text = "Titles"

[node name="QDescriptionsButton" type="Button" parent="VBoxContainer/questionsHBox/questionsAHBox"]
margin_left = 154.0
margin_top = 125.0
margin_right = 366.0
margin_bottom = 168.0
size_flags_vertical = 4
toggle_mode = true
text = "Descriptions"

[node name="QImagesButton" type="Button" parent="VBoxContainer/questionsHBox/questionsAHBox"]
margin_left = 426.0
margin_top = 125.0
margin_right = 545.0
margin_bottom = 168.0
size_flags_vertical = 4
toggle_mode = true
text = "Images"

[node name="QVideoButton" type="Button" parent="VBoxContainer/questionsHBox/questionsAHBox"]
margin_left = 605.0
margin_top = 125.0
margin_right = 701.0
margin_bottom = 168.0
size_flags_vertical = 4
toggle_mode = true
text = "Video"

[node name="QAudioButton" type="Button" parent="VBoxContainer/questionsHBox/questionsAHBox"]
margin_left = 761.0
margin_top = 125.0
margin_right = 859.0
margin_bottom = 168.0
size_flags_vertical = 4
toggle_mode = true
text = "Audio"

[node name="AddativeHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 302.0
margin_right = 1600.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 400

[node name="Label" type="Label" parent="VBoxContainer/AddativeHBox"]
margin_top = 125.0
margin_right = 148.0
margin_bottom = 168.0
text = "Addative"

[node name="AddativeAHBox" type="HBoxContainer" parent="VBoxContainer/AddativeHBox"]
margin_left = 548.0
margin_right = 708.0
margin_bottom = 294.0
custom_constants/separation = 60

[node name="YesButton" type="Button" parent="VBoxContainer/AddativeHBox/AddativeAHBox"]
margin_top = 125.0
margin_right = 55.0
margin_bottom = 168.0
size_flags_vertical = 4
toggle_mode = true
text = "Yes"

[node name="NoButton" type="Button" parent="VBoxContainer/AddativeHBox/AddativeAHBox"]
margin_left = 115.0
margin_top = 125.0
margin_right = 160.0
margin_bottom = 168.0
size_flags_vertical = 4
toggle_mode = true
text = "No"

[node name="AnswersHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 604.0
margin_right = 1600.0
margin_bottom = 898.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 400

[node name="Label" type="Label" parent="VBoxContainer/AnswersHBox"]
margin_top = 125.0
margin_right = 144.0
margin_bottom = 168.0
text = "Answers"

[node name="AnswersAHBox" type="HBoxContainer" parent="VBoxContainer/AnswersHBox"]
margin_left = 544.0
margin_right = 1403.0
margin_bottom = 294.0
custom_constants/separation = 60

[node name="ATitlesButton" type="Button" parent="VBoxContainer/AnswersHBox/AnswersAHBox"]
margin_top = 125.0
margin_right = 94.0
margin_bottom = 168.0
size_flags_vertical = 4
toggle_mode = true
text = "Titles"

[node name="ADescriptionsButton" type="Button" parent="VBoxContainer/AnswersHBox/AnswersAHBox"]
margin_left = 154.0
margin_top = 125.0
margin_right = 366.0
margin_bottom = 168.0
size_flags_vertical = 4
toggle_mode = true
text = "Descriptions"

[node name="AImagesButton" type="Button" parent="VBoxContainer/AnswersHBox/AnswersAHBox"]
margin_left = 426.0
margin_top = 125.0
margin_right = 545.0
margin_bottom = 168.0
size_flags_vertical = 4
toggle_mode = true
text = "Images"

[node name="AVideoButton" type="Button" parent="VBoxContainer/AnswersHBox/AnswersAHBox"]
margin_left = 605.0
margin_top = 125.0
margin_right = 701.0
margin_bottom = 168.0
size_flags_vertical = 4
toggle_mode = true
text = "Video"

[node name="AAudioButton" type="Button" parent="VBoxContainer/AnswersHBox/AnswersAHBox"]
margin_left = 761.0
margin_top = 125.0
margin_right = 859.0
margin_bottom = 168.0
size_flags_vertical = 4
toggle_mode = true
text = "Audio"

[node name="ACountHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 906.0
margin_right = 1600.0
margin_bottom = 1200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 400

[node name="Label" type="Label" parent="VBoxContainer/ACountHBox"]
margin_top = 125.0
margin_right = 230.0
margin_bottom = 168.0
text = "Answer count"

[node name="ACountAHBox" type="HBoxContainer" parent="VBoxContainer/ACountHBox"]
margin_left = 630.0
margin_right = 874.0
margin_bottom = 294.0
custom_constants/separation = 60

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/ACountHBox/ACountAHBox"]
margin_top = 115.0
margin_right = 244.0
margin_bottom = 178.0
size_flags_vertical = 4
min_value = 2.0
value = 4.0

[connection signal="pressed" from="VBoxContainer/questionsHBox/questionsAHBox/QTitlesButton" to="." method="_on_QTitlesButton_pressed"]
[connection signal="pressed" from="VBoxContainer/questionsHBox/questionsAHBox/QDescriptionsButton" to="." method="_on_QDescriptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/questionsHBox/questionsAHBox/QImagesButton" to="." method="_on_QImagesButton_pressed"]
[connection signal="pressed" from="VBoxContainer/questionsHBox/questionsAHBox/QVideoButton" to="." method="_on_QVideoButton_pressed"]
[connection signal="pressed" from="VBoxContainer/questionsHBox/questionsAHBox/QAudioButton" to="." method="_on_QAudioButton_pressed"]
[connection signal="pressed" from="VBoxContainer/AddativeHBox/AddativeAHBox/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="VBoxContainer/AddativeHBox/AddativeAHBox/NoButton" to="." method="_on_NoButton_pressed"]
[connection signal="pressed" from="VBoxContainer/AnswersHBox/AnswersAHBox/ATitlesButton" to="." method="_on_ATitlesButton_pressed"]
[connection signal="pressed" from="VBoxContainer/AnswersHBox/AnswersAHBox/ADescriptionsButton" to="." method="_on_ADescriptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/AnswersHBox/AnswersAHBox/AImagesButton" to="." method="_on_AImagesButton_pressed"]
[connection signal="pressed" from="VBoxContainer/AnswersHBox/AnswersAHBox/AVideoButton" to="." method="_on_AVideoButton_pressed"]
[connection signal="pressed" from="VBoxContainer/AnswersHBox/AnswersAHBox/AAudioButton" to="." method="_on_AAudioButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/ACountHBox/ACountAHBox/SpinBox" to="." method="_on_SpinBox_value_changed"]
